--- a/demo/src/main/webapp/resources/css/demo.css
+++ b/demo/src/main/webapp/resources/css/demo.css
@@ -1,1 +1,14 @@
-body {}
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.createUser {
+    text-align: right;
+    color: aqua;
+}
+
+button {
+    background-color: rebeccapurple;
+}
